agent: refactoring fixes for connection
Signed-off-by: Abhishek Kumar <abhishek.mrt22@gmail.com>